[package]
name = "rtc6715-pio"
version = "0.0.1"
authors = [ "Olexandr Koval <kovalidis@gmail.com>" ]
edition = "2024"

[dependencies]
embassy-rp = { version = "0.4.0" }
embassy-time = { version = "0.4.0" }
fixed = "1.29.0"

[features]
default = ["rp2040"]
rp2040 = ["embassy-rp/rp2040"]
rp2350 = ["embassy-rp/rp235xa"]
